--- a/StudentManager/StudentManager.web/StudentManager.web.csproj
+++ b/StudentManager/StudentManager.web/StudentManager.web.csproj
@@ -216,6 +216,7 @@
     <Compile Include="ViewModels\IsActiveModel.cs" />
     <Compile Include="ViewModels\ProfessorDetailsViewModel.cs" />
     <Compile Include="ViewModels\ProfessorsViewModel.cs" />
+    <Compile Include="ViewModels\StudentCourseGrade.cs" />
     <Compile Include="ViewModels\StudentDetailsViewModel.cs" />
     <Compile Include="ViewModels\StudentsViewModel.cs" />
   </ItemGroup>
@@ -224,6 +225,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\images\school.png" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -337,10 +339,12 @@
     <Content Include="Views\Classes\Create.cshtml" />
     <Content Include="Views\Classes\Edit.cshtml" />
     <Content Include="Views\Classes\Details.cshtml" />
+    <Content Include="Views\Courses\Index.cshtml" />
+    <Content Include="Views\Courses\Details.cshtml" />
+    <Content Include="Views\Courses\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Courses\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
