--- a/StudentManager/StudentManager.web/Web.config
+++ b/StudentManager/StudentManager.web/Web.config
@@ -85,7 +85,7 @@
   </log4net>
   <connectionStrings>
     <!-- <add name="MovieLibrary" connectionString="Data Source=DANIELFE-LAP\SQLEXPRESS01;Initial Catalog=MovieLibrary;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" /> -->
-    <add name="Students" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Students;Data Source=DANIELFE-LAP\SQLEXPRESS01" providerName="System.Data.SqlClient" />
+    <add name="Students" connectionString="Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=Student1;Data Source=DANIELFE-LAP\SQLEXPRESS01" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
